--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,7 @@
-.env
-venv/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+package-lock.json
 /node_modules
 /.pnp
 .pnp.js
@@ -22,3 +22,5 @@ venv/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/../__pycache__
